--- a/package.json
+++ b/package.json
@@ -13,24 +13,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:STRML/react-grid-layout.git"
+    "url": "git@github.com:smussell/react-grid-layout.git"
   },
-  "keywords": [
-    "react",
-    "grid",
-    "drag",
-    "draggable",
-    "resize",
-    "resizable",
-    "fluid",
-    "responsive"
-  ],
-  "author": "Samuel Reed <samuel.trace.reed@gmail.com> (http://strml.net/)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/STRML/react-grid-layout/issues"
-  },
-  "homepage": "https://github.com/STRML/react-grid-layout",
   "dependencies": {
     "deep-equal": "^1.0.0",
     "object-assign": "^2.0.0",
@@ -56,11 +40,5 @@
     "style-loader": "^0.9.0",
     "webpack": "^1.7.3",
     "webpack-dev-server": "^1.8.0"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org"
-  },
-  "pre-commit": [
-    "lint"
-  ]
+  }
 }
