--- a/package.json
+++ b/package.json
@@ -13,13 +13,29 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:smussell/react-grid-layout.git"
+    "url": "git@github.com:STRML/react-grid-layout.git"
   },
+  "keywords": [
+    "react",
+    "grid",
+    "drag",
+    "draggable",
+    "resize",
+    "resizable",
+    "fluid",
+    "responsive"
+  ],
+  "author": "Samuel Reed <samuel.trace.reed@gmail.com> (http://strml.net/)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/STRML/react-grid-layout/issues"
+  },
+  "homepage": "https://github.com/STRML/react-grid-layout",
   "dependencies": {
     "deep-equal": "^1.0.0",
     "object-assign": "^2.0.0",
     "react-draggable": "git+https://github.com/mzabriskie/react-draggable.git",
-    "react-resizable": "^0.4.1"
+    "react-resizable": "^0.3.3"
   },
   "devDependencies": {
     "babel": "^5.0.1",
@@ -40,5 +56,11 @@
     "style-loader": "^0.9.0",
     "webpack": "^1.7.3",
     "webpack-dev-server": "^1.8.0"
-  }
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
+  "pre-commit": [
+    "lint"
+  ]
 }
